--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
             <h1 >New and Upcoming Games</h1><hr>
             <h2>1. Apex Legends</h2>
             <div class="zoom">
-            <img src="ajpg.jpg" class="right" height=200px height=100px>
+            <img src="ajpg.jpg" class="right" height=200px>
             </div>
             <p>Apex Legends is a free-to-play Battle Royale game where legendary competitors battle for glory, fame, and fortune on the fringes of the Frontier.</p>
             <h2>2. Metro Exodus</h2>
-            <div class="zoom1"><img src="Metrog.jpg" class= "left" height=200px ></div>
+            <div class="zoom1"><img src="metrog.jpg" class= "left" height=200px ></div>
             <p>Metro Exodus is an epic, story-driven first person shooter from 4A Games that blends deadly combat and stealth with exploration and survival horror in one of the most immersive game worlds ever created. </p>
             <h2>3. Resident Evil 2 Remake</h2>
             <div class="zoom1"><img src="res.jpg" class= "left" height=200px ></div>
@@ -54,7 +54,7 @@
               <input type="submit" id="btn" value="Subscribe">              
             </div>
           </form>
-	<footer>© Copyright 2019, All Rights Reserved</footer>
+	<footer>Â© Copyright 2019, All Rights Reserved</footer>
     </body>
     <script src="gaming.js"></script>
     </html>
